bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value move
move match {
^BDR2:2: error: not found: value rigth
  case "R" => rigth() ; forward()
              ^