bdr.BDR2.scala.code
move match {
  case "R" => rigth() ; forward()
  case "L" => left() ; forward()
  case "I" => back() ; forward()
  case"A" => forward()
  case"B" => forward(); forward()
  case"C" => forward(); forward(); forward()
  case"Z" => backward()
  case "Y" => backward() ; backward()
  case "X" => backward(); backward(); backward()
}